--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Profile Bandung</title>
+    <link rel="stylesheet" href="assets/style/style.css">
 </head>
 
 <body>
@@ -100,12 +101,41 @@
 
         <aside>
             <article>
-                <h2>Kota Bandung</h2>
-                <p>Kota Kembang Paris Van Java</p>
-                <figure>
-                    <img src="assets/bandung-badge.png" alt="logo bandung">
-                    <figcaption>Lambang/Logo</figcaption>
-                </figure>
+                <header>
+                    <h2>Kota Bandung</h2>
+                    <p>Kota Kembang Paris Van Java</p>
+                    <figure>
+                        <img src="assets/bandung-badge.png" alt="logo bandung">
+                        <figcaption>Lambang/Logo</figcaption>
+                    </figure>
+                </header>
+
+                <section>
+                    <h3>Informasi Lainnya</h3>
+
+                    <table>
+                        <tr>
+                            <th>Negara</th>
+                            <td>Indonesia</td>
+                        </tr>
+                        <tr>
+                            <th>Hari Jadi</th>
+                            <td>25 September 1810</td>
+                        </tr>
+                        <tr>
+                            <th>Luas Total</th>
+                            <td>167.67km<sup>2</sup></td>
+                        </tr>
+                        <tr>
+                            <th>Bahasa Daerah</th>
+                            <td>Sunda</td>
+                        </tr>
+                        <tr>
+                            <th>Kode Telepon</th>
+                            <td>+62 22</td>
+                        </tr>
+                    </table>
+                </section>
             </article>
         </aside>
 
