--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Profile Bandung</title>
     <link rel="stylesheet" href="assets/style/style.css">
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h2>Kota Bandung</h2>
-        <p>Kota Kembang Paris Van Java</p>
+        <div class="jumbotron">
+            <h1>Bandung</h1>
+            <p>Kota metrapolitan terbesar di Provinsi Jawa Barat, Sekaligus menjadi ibu kota provinsi tersebut</p>
+        </div>
         <nav>
             <ul>
                 <li><a href="#sejarah">Sejarah</a></li>
@@ -23,9 +30,9 @@
 
     <main>
         <div id="content">
-            <article id="sejarah">
+            <article id="sejarah" class="card">
                 <h2 id="sejarah">Sejarah</h2>
-                <img src="assets/history.jpg" alt="sejarah" />
+                <img src="assets/history.jpg" alt="sejarah" class="featured-image" />
                 <p>
                     Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai Citarum oleh
                     lava Gunung Tangkuban Parahu yang lalu membentuk telaga. Legenda yang diceritakan oleh
@@ -45,9 +52,9 @@
                 </p>
             </article>
 
-            <article id="geografis">
+            <article id="geografis" class="card">
                 <h2 id="geografis">Geografis</h2>
-                <img src="assets/geografis.jpg" alt="geografis" />
+                <img src="assets/geografis.jpg" alt="geografis" class="featured-image" />
                 <p>
                     Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan sebuah
                     mangkok raksasa,[9] secara geografis kota ini terletak di tengah-tengah provinsi Jawa Barat,
@@ -64,7 +71,7 @@
                 </p>
             </article>
 
-            <article id="wisata">
+            <article id="wisata" class="card">
                 <h2 id="wisata">Wisata</h2>
                 <p>
                     Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam menikmati
@@ -75,7 +82,7 @@
 
                 <section>
                     <h3>Farm House Lembang</h3>
-                    <img src="assets/farm-house.jpg" alt="farm house" />
+                    <img src="assets/farm-house.jpg" alt="farm house" class="featured-image" />
                     <p>
                         Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata yang tidak pernah
                         sepi pengunjung. Selain karena letaknya strategis, kawasan ini juga menghadirkan nuansa
@@ -85,7 +92,7 @@
 
                 <section>
                     <h3>Observatorium Bosscha</h3>
-                    <img src="assets/bosscha.jpg" alt="bosscha" />
+                    <img src="assets/bosscha.jpg" alt="bosscha" class="featured-image" />
                     <p>
                         Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt Bimasakti, Refraktor
                         Bamberg, Cassegrain GOTO, dan Teleskop Surya. Refraktor Ganda Zeiss adalah jenis teleskop
@@ -100,7 +107,7 @@
         </div>
 
         <aside>
-            <article>
+            <article class="profile card">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris Van Java</p>
